--- a/index.html
+++ b/index.html
@@ -6,38 +6,193 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penguine Fashion</title>
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="images/logo.png" style="height: 30px;" alt="">
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
-                </ul>
+<body class="container">
+    <header>
+        <nav id="nav-colors" class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" style="height: 30px;" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Product</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact us</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <section style="background-color: #FFFBF0;">
+        <div class="d-flex align-items-center" style="height: 500px;">
+            <div class="col-5 p-2">
+                <h1 class="text-warning">BE THE PENGUINS</h1>
+                <h1>OF WINTER</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing
+                    and typesetting industry.
+                </p>
+                <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
+                    BUY NOW
+                </button>
+            </div>
+            <div class="col-5" style="width: 450px;">
+                <img src="images/icon/green.png" class="img-fluid" alt="">
             </div>
         </div>
-    </nav>
+    </section>
+
+    <section class="mt-4">
+        <h2>WOMAN'S JACKET</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <!-- <div style="width: 334px; height:327px; background-color: #A4BC46;"> -->
+                    <div class="rounded m-3" style="background-color: #F1F1F1;">
+                        <img src="images/image/woman-01.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                    </div>
+                    <div id="card-footer-style" class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <h3>$234</h3>
+                            <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
+                                BUY NOW
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <div class="rounded m-3" style="background-color: #F1F1F1;">
+                        <img src="images/image/woman-02.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                    </div>
+                    <div id="card-footer-style" class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <h3>$234</h3>
+                            <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
+                                BUY NOW
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <div class="rounded m-3" style="background-color: #F1F1F1;">
+                        <img src="images/image/woman-03.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                    </div>
+                    <div id="card-footer-style" class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <h3>$234</h3>
+                            <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
+                                BUY NOW
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mt-4">
+        <h2>MEN'S JACKET</h2>
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <!-- <div style="width: 334px; height:327px; background-color: #A4BC46;"> -->
+                    <div class="rounded m-3" style="background-color: #F1F1F1;">
+                        <img src="images/image/man-01.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                    </div>
+                    <div id="card-footer-style" class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <h3>$234</h3>
+                            <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
+                                BUY NOW
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <div class="rounded m-3" style="background-color: #F1F1F1;">
+                        <img src="images/image/man-02.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                    </div>
+                    <div id="card-footer-style" class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <h3>$234</h3>
+                            <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
+                                BUY NOW
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <div class="rounded m-3" style="background-color: #F1F1F1;">
+                        <img src="images/image/man-03.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                            content.</p>
+                    </div>
+                    <div id="card-footer-style" class="card-footer">
+                        <div class="d-flex justify-content-between">
+                            <h3>$234</h3>
+                            <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
+                                BUY NOW
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
