--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body class="container">
     <header>
-        <nav id="nav-colors" class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg nav-colors">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="images/logo.png" style="height: 30px;" alt="">
