--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
                 <p>Lorem Ipsum is simply dummy text of the printing
                     and typesetting industry.
                 </p>
-                <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
-                    BUY NOW
+                <button type="button" class="btn button-size" style="background-color: #A4BC46; color: white;">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <img src="images/icon/shopping-cart 1.png" alt="">
+                        <p>BUY NOW</p>
+                    </div>
                 </button>
             </div>
             <div class="col-5" style="width: 450px;">
@@ -64,7 +67,7 @@
         <h2>WOMAN'S JACKET</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 shadow">
                     <!-- <div style="width: 334px; height:327px; background-color: #A4BC46;"> -->
                     <div class="rounded m-3" style="background-color: #F1F1F1;">
                         <img src="images/image/woman-01.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
@@ -85,7 +88,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 shadow">
                     <div class="rounded m-3" style="background-color: #F1F1F1;">
                         <img src="images/image/woman-02.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
                     </div>
@@ -105,7 +108,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 shadow">
                     <div class="rounded m-3" style="background-color: #F1F1F1;">
                         <img src="images/image/woman-03.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
                     </div>
@@ -131,7 +134,7 @@
         <h2>MEN'S JACKET</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 shadow">
                     <!-- <div style="width: 334px; height:327px; background-color: #A4BC46;"> -->
                     <div class="rounded m-3" style="background-color: #F1F1F1;">
                         <img src="images/image/man-01.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
@@ -152,7 +155,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 shadow">
                     <div class="rounded m-3" style="background-color: #F1F1F1;">
                         <img src="images/image/man-02.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
                     </div>
@@ -172,7 +175,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="card h-100">
+                <div class="card h-100 shadow">
                     <div class="rounded m-3" style="background-color: #F1F1F1;">
                         <img src="images/image/man-03.png" class="mx-auto d-block" style="width: 200px; height: 270px;" alt="...">
                     </div>
@@ -193,6 +196,69 @@
             </div>
         </div>
     </section>
+
+    <section class="mt-4">
+        <div class="d-flex align-items-center justify-content-between" style="height: 500px;">
+            <div class="col-5">
+                <div class="d-flex card card-borderless shadow rounded">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4 d-flex justify-content-center">
+                                <img style="width: 78px;" src="images/icon/image 12.png" alt="">
+                            </div>
+                            <div class="col-8">
+                                <h5 class="card-title">Find the Perfect Fit</h5>
+                                <p class="card-text">Everybody is different, which is why we
+                                offer styles for every body.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex card shadow rounded mt-2">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4 d-flex justify-content-center">
+                                <img style="width: 78px;" src="images/icon/image 13.png" alt="">
+                            </div>
+                            <div class="col-8">
+                                <h5 class="card-title">Free Exchanges</h5>
+                                <p class="card-text">One of the many reasons you can shop
+                                    with peace of mind.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="d-flex card shadow rounded mt-2">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-4 d-flex justify-content-center">
+                                <img style="width: 78px;" src="images/icon/image 14.png" alt="">
+                            </div>
+                            <div class="col-8">
+                                <h5 class="card-title">Contact Our Seller</h5>
+                                <p class="card-text">They are here to help you. That's quite 
+                                    literally what we pay them for.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-5" style="width: 450px;">
+                <img src="images/icon/XMLID 1.png" class="img-fluid" alt="">
+            </div>
+        </div>
+    </section>
+    <section id="subscribe" class="d-flex shadow rounded justify-content-center align-items-center mt-4 bg-touch touch-section">
+        <div>
+          <h1>LET'S STAY IN TOUCH</h1>
+          <h6>Get updates on sales, specials and more</h6>
+          <input type="text" placeholder="Enter your email">
+          <button class="btn" style="background-color: #A4BC46; color: white;">Send</button>
+        </div>
+    </section>
+    <footer class="text-center mt-5 mb-1">
+        <h6>@2022 | All rights Reserved | e-commerce</h6>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
