--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
+                <div class="d-flex justify-content-end collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
@@ -50,15 +50,15 @@
                 <p>Lorem Ipsum is simply dummy text of the printing
                     and typesetting industry.
                 </p>
-                <button type="button" class="btn button-size" style="background-color: #A4BC46; color: white;">
-                    <div class="d-flex align-items-center justify-content-center">
+                <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
+                    <div class="d-flex button-size">
                         <img src="images/icon/shopping-cart 1.png" alt="">
                         <p>BUY NOW</p>
                     </div>
                 </button>
             </div>
             <div class="col-5" style="width: 450px;">
-                <img src="images/icon/green.png" class="img-fluid" alt="">
+                <img src="images/cover.png" class="img-fluid" alt="">
             </div>
         </div>
     </section>
@@ -81,7 +81,10 @@
                         <div class="d-flex justify-content-between">
                             <h3>$234</h3>
                             <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
-                                BUY NOW
+                                <div class="d-flex button-size">
+                                    <img src="images/icon/shopping-cart 1.png" alt="">
+                                    <p>BUY NOW</p>
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -101,7 +104,10 @@
                         <div class="d-flex justify-content-between">
                             <h3>$234</h3>
                             <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
-                                BUY NOW
+                                <div class="d-flex button-size">
+                                    <img src="images/icon/shopping-cart 1.png" alt="">
+                                    <p>BUY NOW</p>
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -121,7 +127,10 @@
                         <div class="d-flex justify-content-between">
                             <h3>$234</h3>
                             <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
-                                BUY NOW
+                                <div class="d-flex button-size">
+                                    <img src="images/icon/shopping-cart 1.png" alt="">
+                                    <p>BUY NOW</p>
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -148,7 +157,10 @@
                         <div class="d-flex justify-content-between">
                             <h3>$234</h3>
                             <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
-                                BUY NOW
+                                <div class="d-flex button-size">
+                                    <img src="images/icon/shopping-cart 1.png" alt="">
+                                    <p>BUY NOW</p>
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -168,7 +180,10 @@
                         <div class="d-flex justify-content-between">
                             <h3>$234</h3>
                             <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
-                                BUY NOW
+                                <div class="d-flex button-size">
+                                    <img src="images/icon/shopping-cart 1.png" alt="">
+                                    <p>BUY NOW</p>
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -188,7 +203,10 @@
                         <div class="d-flex justify-content-between">
                             <h3>$234</h3>
                             <button type="button" class="btn" style="background-color: #A4BC46; color: white;">
-                                BUY NOW
+                                <div class="d-flex button-size">
+                                    <img src="images/icon/shopping-cart 1.png" alt="">
+                                    <p>BUY NOW</p>
+                                </div>
                             </button>
                         </div>
                     </div>
@@ -257,7 +275,7 @@
         </div>
     </section>
     <footer class="text-center mt-5 mb-1">
-        <h6>@2022 | All rights Reserved | e-commerce</h6>
+        <h6>@2022 | All rights Reserved | penguin fashion</h6>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
